refactor: Simplify project structure and fix command suggestions
Merged admin and player commands into a single class, flattened the storage layer by removing the interface, and switched to public config fields to reduce boilerplate. Also resolved a UI issue where duplicate lowercase names appeared in tab-complete.